Code style, cleanup, and Java 7 features
- Removed unused imports
- Added missing @Override annotations
- Changed to use interface over implementation for LHS
- Use diamond operator for right hand side of assignment
- Added braces around if/else while code blocks
- Added spaces
- Use try-with-resources
- use StringUtils.isEmpty()